--- a/manifest/templates/AdManager.template.yaml
+++ b/manifest/templates/AdManager.template.yaml
@@ -15,7 +15,7 @@
       - name: AdManager
         file: ./kaleido-core/abi/contracts/AdManager.sol/AdManager.json
     eventHandlers:
-      - event: NewPost(uint256,address,string,uint8,uint256,uint256)
+      - event: NewPost(uint256,address,string,uint256,uint256)
         handler: handleNewPost
       - event: Accept(uint256,uint256)
         handler: handleAccept
