--- a/manifest/templates/AdManager.template.yaml
+++ b/manifest/templates/AdManager.template.yaml
@@ -11,6 +11,7 @@
     language: wasm/assemblyscript
     entities:
       - PostContent
+      - Inventory
     abis:
       - name: AdManager
         file: ./kaleido-core/abi/contracts/AdManager.sol/AdManager.json
