--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "gen": "graph codegen -o src/generated && yarn typechain --target web3-v1 app/contracts './kaleido-core/abi/contracts/*.sol/*.json' --out-dir src/generated",
-    "test": "graph build && ./matchstick AdManager",
+    "test": "graph build && ./matchstick mapping",
     "local": "graph create kaleido/kaleido --node http://127.0.0.1:8020",
     "deploy:local": "graph deploy -l v0.0.1 kaleido/kaleido subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy:contracts:local": "cd kaleido-core && npx hardhat deploy --network ganache",
@@ -17,8 +17,8 @@
     "@apollo/client": "^3.3.21",
     "@ethereumjs/common": "^2.4.0",
     "@ethereumjs/tx": "^3.3.0",
-    "@graphprotocol/graph-cli": "0.21.1",
-    "@graphprotocol/graph-ts": "^0.20.1",
+    "@graphprotocol/graph-cli": "^0.23.0",
+    "@graphprotocol/graph-ts": "^0.23.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/web3-v1": "^3.0.0",
@@ -53,8 +53,8 @@
   "dependencies": {
     "@assemblyscript/loader": "^0.19.11",
     "@openzeppelin/contracts": "^4.3.2",
-    "assemblyscript": "git+https://github.com/AssemblyScript/assemblyscript.git#v0.6",
-    "matchstick-as": "^0.0.49",
+    "assemblyscript": "^0.19.18",
+    "matchstick-as": "^0.2.0",
     "mustache": "^4.2.0"
   }
 }
