--- a/manifest/templates/AdManager.template.yaml
+++ b/manifest/templates/AdManager.template.yaml
@@ -7,11 +7,12 @@
     abi: EventEmitter
   mapping:
     kind: ethereum/events
-    apiVersion: 0.0.4
+    apiVersion: 0.0.5
     language: wasm/assemblyscript
     entities:
-      - PostContent
-      - Inventory
+      - Media
+      - Space
+      - Period
     abis:
       - name: EventEmitter
         file: ./kaleido-core/abi/contracts/peripheries/EventEmitter.sol/EventEmitter.json
