--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "gen": "graph codegen -o src/generated && yarn typechain --target web3-v1 app/contracts './kaleido-core/abi/contracts/*.sol/*.json' --out-dir src/generated",
-    "test": "graph build && ./matchstick mapping",
+    "build": "graph build",
+    "test": "graph test mapping",
     "local": "graph create kaleido/kaleido --node http://127.0.0.1:8020",
     "deploy:local": "graph deploy -l v0.0.1 kaleido/kaleido subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy:contracts:local": "cd kaleido-core && npx hardhat deploy --network ganache",
@@ -23,10 +24,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/web3-v1": "^3.0.0",
     "@types/node": "^16.3.3",
-    "apollo-client": "^2.6.10",
     "assemblyscript": "^0.19.11",
-    "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -46,14 +44,13 @@
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
     "ts-node": "^10.1.0",
-    "typechain": "^5.1.2",
+    "typechain": "^6.0.0",
     "typechain-target-web3-v1": "^1.0.4",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@assemblyscript/loader": "^0.19.11",
     "@openzeppelin/contracts": "^4.3.2",
-    "assemblyscript": "^0.19.18",
     "matchstick-as": "^0.2.0",
     "mustache": "^4.2.0"
   }
